# car_ackermann

./: README.md
car_ackermann_control/: CMakeLists.txt  package.xml
car_ackermann_control/config/: car_ackermann_control.yaml
car_ackermann_control/launch/: car_ackermann_control.launch
car_ackermann_description/: CMakeLists.txt  package.xml
car_ackermann_description/launch/: car_ackermann_rviz.launch  lidar_ackermann.rviz
car_ackermann_description/urdf/: car_ackermann.gazebo  car_ackermann.xacro  materials.xacro
car_ackermann_gazebo/: CMakeLists.txt  package.xml
car_ackermann_gazebo/launch/: car_ackermann_world.launch
car_ackermann_gazebo/worlds/: car_ackermann.world
car_ackermann_teleop_to_control/: CMakeLists.txt  package.xml
car_ackermann_teleop_to_control/launch/: controller.launch
car_ackermann_teleop_to_control/src/: controller.cpp
