<?xml version="1.0"?>
<package>
  <name>car_ackermann_control</name>
  <version>0.0.0</version>
  <description>The car_ackermann_control package</description>

  <maintainer email="hugo.reubrecht@ensta-bretagne.org">Hugo Reubrecht</maintainer>

  <license>BSD</license>


  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="hugo.reubrecht@ensta-bretagne.org">Hugo Reubrecht</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
