<?xml version="1.0"?>
<package>
  <name>car_ackermann_description</name>
  <version>0.0.0</version>
  <description>The car_ackerman_description package</description>

  <maintainer email="hugo.reubrecht@ensta-bretagne.org">Hugo Reubrecht</maintainer>

  <license>BSD</license>


  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="hugo.reubrecht@ensta-bretagne.org">Hugo Reubrecht</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
